--- a/portfolio.css
+++ b/portfolio.css
@@ -585,19 +585,18 @@ button {
  }
 
 .hero-text-2{
-  height: 20%;
     font-size: 2.2rem;
   margin-top: -5px;
 }
 
 .hero-text-3{
-  height: 10%;
-    font-size: 1rem;
-    letter-spacing: normal;
+  height: 12%;
+  font-size: 1rem;
+  letter-spacing: 5px;
 }
 
 .intro{
-  border: 2px solid rgb(0, 255, 42);
+  border: 2px solid rgb(251, 255, 0);
 }
 
 .hero-paragraph{
