--- a/portfolio.css
+++ b/portfolio.css
@@ -498,6 +498,7 @@ button{
   }
 
   .meet-me{
+    border: 2px solid red;
     margin: 25px 5px 5px 0;
     height: 80%;
     width: 90%;
@@ -508,6 +509,7 @@ button{
   }
 
 .text-area{
+  border: 2px solid rgb(43, 255, 0);
     width: 95%;
     height: 80%;
 }
@@ -527,14 +529,26 @@ button{
     letter-spacing: 5px;
 }
 
+.intro{
+  border: 2px solid teal;
+
+}
+
 .hero-paragraph{
   margin-top: -12px;
   width: 100%;
   font-size: 14px;
 }
 
+.social-buttons{
+  margin-top: 10px;
+  width: 30%;
+  border: 2px solid aqua;
+
+}
+
 .icons{
-  padding-left: 10px;
+  padding-left: 0;
   margin-top: 5px;
   width: 35px;
   height: 35px;
@@ -542,9 +556,9 @@ button{
 
 button {
   margin-top: 10px;
-  font-size: 20px;
+  font-size: 17px;
   width: 30%;
-  height: 50%;
+  height: 40%;
   padding: 2px 5px 2px 5px;
 }
 } 
@@ -559,13 +573,11 @@ button {
   }
 
   .meet-me{
-  border: 2px solid rgb(243, 58, 26);
     height: 80%; 
     width: 95%;
   }
 
 .text-area{
-  border: 2px solid rgb(216, 18, 255);
   flex-direction: column;
     width: 95%;
     height: 80%;
@@ -592,11 +604,10 @@ button {
 .hero-text-3{
   height: 12%;
   font-size: 1rem;
-  letter-spacing: 5px;
+  letter-spacing: normal;
 }
 
 .intro{
-  border: 2px solid rgb(251, 255, 0);
 }
 
 .hero-paragraph{
