--- a/portfolio.css
+++ b/portfolio.css
@@ -511,7 +511,7 @@ button{
 .text-area{
   border: 2px solid rgb(43, 255, 0);
     width: 95%;
-    height: 80%;
+    height: 90%;
 }
 
  .hero-image-container{
@@ -530,7 +530,9 @@ button{
 }
 
 .intro{
-  border: 2px solid teal;
+  border: 2px solid rgb(245, 47, 255);
+  margin-top:10px;
+  width: 80%;
 
 }
 
@@ -548,7 +550,7 @@ button{
 }
 
 .icons{
-  padding-left: 0;
+  padding-left: 5px;
   margin-top: 5px;
   width: 35px;
   height: 35px;
@@ -558,7 +560,7 @@ button {
   margin-top: 10px;
   font-size: 17px;
   width: 30%;
-  height: 40%;
+  height: 30%;
   padding: 2px 5px 2px 5px;
 }
 } 
