--- a/portfolio.css
+++ b/portfolio.css
@@ -596,14 +596,14 @@ button {
  }
 
 .hero-text-2{
-    font-size: 2.2rem;
+    font-size: 10vw;
   margin-top: -5px;
 }
 
 .hero-text-3{
   height: 12%;
-  font-size: 1rem;
-  letter-spacing: normal;
+    font-size: 6vw;
+  letter-spacing: 2px;
 }
 
 .intro{
