--- a/portfolio.css
+++ b/portfolio.css
@@ -637,3 +637,318 @@ button {
 }
 /* HERO SECTION ENDS */
 
+
+
+/* ABOUT ME SECTION BEGINS */
+.about-me{
+  height: 80vh;
+  display: flex;
+  flex-direction: row; 
+  justify-content: center;
+  align-items: center; 
+}
+
+.about-me-content{
+  width: 80%;
+  height: 90%;
+  padding: 0 20px;
+  display: flex;
+  flex: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.dashed-heading{
+}
+
+.separator{
+  display: flex;
+  align-items: center;
+}
+
+.separator h2{
+  padding: 0 0.5rem; 
+}
+
+.separator .line{
+  flex: 1;
+  height: 1px;
+  background-color: #ffffff;
+  opacity: 30%;
+}
+
+.about-me-text{
+  width: 40%;
+  height: 99%; 
+  margin-top: 0; 
+  line-height: 25px;
+}
+
+.about-me-image{
+  width: 40%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.about-me-image-container{
+  width: 300px;
+  height: 300px;
+  margin-left: 0;
+  box-shadow: 8px 8px 2px teal;
+}
+
+.about-image{
+  width: 300px;
+  height: 300px;
+}
+
+.proficiency {
+  width: 80%;
+}
+
+.proficiency-ul {
+  width: 100%;
+  padding-left: 5px;
+  list-style-type: none;
+  display: flex;
+  justify-content: space-around;
+  height: 15%;
+}
+
+ .proficiency-li {
+  padding-left: 15px;
+  background-image: url('Capture.PNG');
+  background-position: 5px 5px;
+  background-repeat: no-repeat;
+  width: 100%;
+  display: inline;
+} 
+
+
+/* SMALL SCREENS, LAPTOPS */
+@media only screen and (max-width: 1024px) {
+
+  .about-me{
+    height: 80vh;
+  }
+  
+  .about-me-content{
+    width: 85%;
+    height: 98%;
+  }
+  
+  .separator h2{
+    padding: 0 0.5rem; 
+  }
+  
+  .separator .line{
+    flex: 1;
+    height: 1px;
+    background-color: #ffffff;
+  }
+  
+  .about-me-text{
+    width: 50%;
+    height: 98%; 
+    padding: 0 10px;
+    margin-top: -10px; 
+  }
+  
+  .about-me-image{
+  
+  }
+  
+  .about-me-image-container{
+    width: 250px;
+    height: 250px;
+  }
+  
+  .about-image{
+    width: 250px;
+    height: 250px;
+  }
+  
+   .proficiency-li {
+    background-position: 0 5px;
+  } 
+  } 
+
+  
+ /* iPADS, TABLETS */
+ @media only screen and (max-width: 768px) {
+   
+  .about-me{
+    height: 100vh;
+    margin-top: 40px; 
+  
+  }
+  
+  .about-me-content{
+    border: 2px solid rgb(0, 255, 179);
+    flex-direction: column;
+    margin-top: -50px; 
+    padding: 0 15px;
+    width: 95%;
+    height: 95%;
+  }
+  
+  .about-me-text{
+    border: 2px solid rgb(247, 7, 239);
+    width: 95%;
+    height: 60%; 
+    margin-top: 15px; 
+    padding: 0 10px;
+    line-height: 20px;
+  }
+  
+  .about-me-image{
+    border: 2px solid yellow;
+    width: 90%;
+    height: 40%; 
+  }
+  
+  .about-me-image-container{
+    width: 250px;
+    height: 250px;
+    margin-left: 20px;
+    box-shadow: 8px 8px 2px teal;
+  }
+  
+  .about-image{
+    width: 250px;
+    height: 250px;
+  }
+  
+  .about-image{
+    width: 100%;
+    height: 100%;
+  }
+  
+  .proficiency{
+    height: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .proficiency-ul {
+    width: 60%;
+    height: 80%;
+    margin-top: 5px;
+    padding: 10px 20px;
+  }
+  
+  .proficiency-li{
+  }
+  
+   }
+   /* MOBILE LANDSCAPE */
+   @media (max-width: 750px) and (max-height: 500px) and (orientation: landscape) {
+     
+    .about-me{
+      height: 180vh;
+    }
+    
+    .about-me-content{
+      flex-direction: column;
+      margin-top: -10px; 
+      width: 95%;
+      height: 95%;
+    }
+    
+    .about-me-text{
+      width: 90%;
+      height: 60%; 
+      margin-top: 5px; 
+      line-height: 20px;
+    }
+  
+    .about-me-image{
+      height: 40%;
+  
+    }
+    
+    .about-me-image-container{
+      width: 200px;
+      height: 200px;
+      margin-left: 20px;
+      box-shadow: 8px 8px 2px teal;
+    }
+    
+    .about-image{
+      width: 100%;
+      height: 100%;
+    }
+    
+    .proficiency-ul {
+      width: 60%;
+    }
+  
+    .proficiency-li {
+      padding-left: 5px;
+      background-position: 0 3px;
+      display: inline;
+      font-size: 15px;
+    } 
+  
+  } 
+  
+  /* MOBILE PHONE POTRAIT */
+  @media only screen and (max-width: 480px) {
+    
+  .about-me{
+    height: 110vh;
+    margin-top: 20px;
+  }
+  
+  .about-me-content{
+    flex-direction: column;
+    margin-top: -60px; 
+    width: 95%;
+    height: 95%;
+  }
+  
+  .about-me-text{
+    width: 90%;
+    height: 60%; 
+    margin-top: 0; 
+    line-height: 18px;
+  }
+  
+  .about-me-image{
+    margin-top: 30px;
+    height: 40%;
+  
+  }
+  
+  .about-me-image-container{
+    width: 200px;
+    height: 200px;
+    margin-left: 0;
+    box-shadow: 8px 8px 2px teal;
+  }
+  
+  .about-image{
+    width: 200px;
+    height: 200px;
+  }
+  
+  .proficiency-ul {
+    width: 98%;
+  }
+  
+  .proficiency-li {
+    padding-left: 10px;
+    background-position: 0 3px;
+    display: inline;
+    font-size: 12px;
+  } 
+  }
+  /* ABOUT ME SECTION ENDS */
+  
+  
+
