--- a/portfolio.css
+++ b/portfolio.css
@@ -595,7 +595,7 @@ button {
  }
 
 .hero-text-2{
-    font-size: 10vw;
+    font-size: 8vw;
   margin-top: -5px;
 }
 
@@ -787,6 +787,7 @@ button {
   }
   
   .about-me-content{
+    border: 1px solid red;
     flex-direction: column;
     margin-top: -50px; 
     padding: 0 15px;
@@ -795,6 +796,7 @@ button {
   }
   
   .about-me-text{
+    border: 1px solid red;
     width: 95%;
     height: 60%; 
     margin-top: 15px; 
@@ -803,6 +805,7 @@ button {
   }
   
   .about-me-image{
+    border: 1px solid red;
     width: 90%;
     height: 40%; 
   }
@@ -917,7 +920,7 @@ button {
   }
   
   .about-me-image{
-    margin-top: 30px;
+    margin-top: 50px;
     height: 40%;
   
   }
