--- a/portfolio.css
+++ b/portfolio.css
@@ -787,7 +787,6 @@ button {
   }
   
   .about-me-content{
-    border: 1px solid red;
     flex-direction: column;
     margin-top: -50px; 
     padding: 0 15px;
@@ -796,7 +795,6 @@ button {
   }
   
   .about-me-text{
-    border: 1px solid red;
     width: 95%;
     height: 50%; 
     margin-top: 15px; 
@@ -805,7 +803,6 @@ button {
   }
   
   .about-me-image{
-    border: 1px solid red;
     width: 90%;
     height: 50%; 
   }
@@ -949,6 +946,381 @@ button {
   } 
   }
   /* ABOUT ME SECTION ENDS */
+
+  
+/* PROJECTS SECTION STARTS */
+.projects{
+  margin-top: 50px;
+  height: 180vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; 
+}
+
+.projects-container{
+  width: 95%;
+  height: 90%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.project-1, .project-2, .project-3{
+  width: 90%;
+  height: 33%;
+  height: 95%;
+  padding: 0 20px 0 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+#project-2{
+  flex-direction: row-reverse;
+  margin-left: 100px;
+}
+
+.project-content-1{
+  background-color: rgb(34, 34, 112);
+  padding: 10px 10px 10px 20px;
+  width: 50%;
+  height: 50%;
+  position: relative;
+  left: 60px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  justify-content: space-between;
+}
+
+#project-content-1{
+  left: -60px;
+}
+
+.project-topic{
+  height: 15%;
+
+}
+
+.project-description{
+  height: 45%;
+}
+
+.project-paragraph{
+  margin: 0;
+}
+
+.project-tech{
+  text-align: center;
+  height: 10%;
+  word-spacing: 30px;
+
+}
+
+.project-links{
+  height: 15%;
+  word-spacing: 10px;
+}
+
+.github, .external-link{
+  width: 25px;
+  height: 25px;
+}
+
+#project-links-2{
+  text-align: end;
+}
+
+.project-content-2{
+  width: 40%;
+  height: 90%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.project-content-2-image{
+  width: 90%;
+  height: 105%;
+}
+
+#project-img-2{
+  width: 90%;
+  height: 100%;
+}
+
+#project-img-3{
+  width: 90%;
+  height: 100%;
+}
+
+/* SMALL SCREENS, LAPTOPS */
+@media only screen and (max-width: 1024px) {
+    .projects{
+      height: 180vh;
+      margin-top: 0px;
+    }
+    
+    .projects-container{
+    }
+
+    .project-1, .project-2, .project-3{
+      width: 95%;
+      height: 33%;
+      height: 95%;
+      padding: 0 20px 0 0;
+    }
+
+    .project-content-1{
+      padding: 10px 10px 5px 20px;
+      width: 60%;
+      height: 40%;
+      left: 60px;
+    }
+    
+#project-content-1{
+  left: -60px;
+}
+
+.project-topic{
+  height: 12%;
+
+}
+
+.project-description{
+  height: 50%;
+}
+
+.github, .external-link{
+  width: 20px;
+  height: 20px;
+}
+
+.project-content-2{
+  width: 55%;
+  height: 85%;
+}
+
+#project-img-2{
+  width: 90%;
+  height: 95%;
+}
+
+#project-img-3{
+  width: 90%;
+  height: 100%;
+}
+
+} 
+
+ /* iPADS, TABLETS */
+ @media only screen and (max-width: 768px) {
+   .projects{
+     height: 150vh;
+   }
+   
+   .projects-container{
+   }
+
+   .project-1, .project-2, .project-3{
+    width: 99%;
+    height: 33%;
+    padding: 0 20px 0 0;
+    flex-direction: row;
+  }
+
+  #project-2{
+  }
+
+  .project-content-1{
+    background-color: rgb(34, 34, 112);
+    padding: 5px 5px 5px 10px;
+    width: 70%;
+    height: 50%;
+    position: relative;
+    left: 40px;
+  }
+
+  .project-content-2{
+    width: 35%;
+    height: 90%;
+  }
+
+  .project-content-2-image{
+    width: 110%;
+    height: 90%;
+  }
+
+#project-img-2{
+  width: 110%;
+  height: 85%;
+}
+
+#project-img-3{
+  width: 110%;
+  height: 85%;
+}
+
+       
+} 
+
+ /* MOBILE LANDSCAPE */
+ @media (max-width: 750px) and (max-height: 500px) and (orientation: landscape) { 
+   
+  .projects{
+    height: 250vh;
+  }
+  
+  .projects-container{
+    overflow: hidden;
+  }
+
+  .project-1, .project-2, .project-3{
+   width: 99%;
+   height: 33%;
+   padding: 0 20px 0 0;
+   flex-direction: row;
+ }
+
+ #project-2{
+ }
+
+ .project-content-1{
+   background-color: rgb(34, 34, 112);
+   padding: 5px 5px 5px 10px;
+   width: 70%;
+   height: 50%;
+   position: relative;
+   left: 40px;
+ }
+
+ .project-content-2{
+   width: 35%;
+   height: 90%;
+ }
+
+ .project-content-2-image{
+   width: 110%;
+   height: 90%;
+ }
+
+#project-img-2{
+ width: 110%;
+ height: 85%;
+}
+
+#project-img-3{
+ width: 110%;
+ height: 85%;
+}     
+} 
+
+/* MOBILE PHONE POTRAIT */
+@media only screen and (max-width: 480px) { 
+  
+  .projects{
+    height: 220vh;
+    margin-top: 20px;
+
+  }
+
+  .projects-container{
+    margin-top: 100px;
+    width: 99%;
+    height: 90%;
+  }
+
+  .project-1, .project-2, .project-3{
+   width: 95%;
+   height: 40%;
+   padding: 4px;
+   flex-direction: column-reverse;
+ }
+
+ #project-2{
+   margin-left: 0;
+   flex-direction: column-reverse;
+ }
+
+ .project-content-1{
+   background-color: rgb(34, 34, 112);
+   color: #d8c0b7;
+   font-size: 15px;
+   opacity: 90%;
+   padding: 5px;
+   width: 95%;
+   height: 80%;
+   left: 0;
+   bottom: 100px;
+ }
+
+ #project-content-1{
+  left: 0;
+}
+
+.project-topic{
+  height: 15%;
+}
+
+.project-description{
+  height: 60%;
+}
+
+.project-paragraph{
+  font-size: 12px;
+  padding: 3px;
+  margin: 0;
+}
+
+.project-tech{
+  word-spacing: 5px;
+  height: 10%;
+  margin: 5px 2px 5px 2px;
+}
+
+.github, .external-link{
+  height: 10%;
+  width: 20px;
+  height: 20px;
+}
+
+#project-links-2{
+  text-align: start;
+}
+
+ .project-content-2{
+  display: inline;
+   overflow: hidden;
+   width: 99%;
+   height: 120%;
+ }
+
+ .project-content-2-image{
+   width: 100%;
+   height: 120%;
+ }
+
+#project-img-2{
+  overflow: visible; 
+  width: 100%;
+  height: 100%;
+  /* inherits: unset; */
+}
+
+#project-img-3{
+  /* inherits: unset; */
+  overflow: visible; 
+ width: 100%;
+ height: 100%; 
+}
+}
+/* PROJECTS SECTION ENDS */
+
   
   
 
